--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,6 +33,33 @@ a {
   // 1. $variables
   // 2. nesting (dont forget about the ampersand (&) parent selector!)
   // 3. At-Rules
+
+  @include set-bg($primary-color);
+
+  nav {
+    align-items: center;
+    justify-content: space-between;
+    // put items in nav from left to right
+    display: flex;
+
+    ul {
+      // get rid of bullet list
+      list-style-type: none;
+      // displays list from left to right
+      display: flex;
+    }
+
+    li {
+      // put space between each item in the nav list
+      padding: 12px;
+    }
+
+    a {
+      // change font color from blue to white
+      color: text-color-picker($primary-color) 
+    }
+
+  }
 }
 
 // This code is related to some of the aspects of SCSS we have yet to cover.
